--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Entries</h1>
-<%= link_to 'New Journal Entry', new_entry_path %>
+<%= link_to 'New Journal Entry', new_entry_path %> |
+<%= link_to 'New Category', new_category_path %>
+
 <br>
 <% @entries.each do |entry| %>
 <span class="title"><%= entry.title %></span><br/>
