--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -17,6 +17,11 @@
   <br>
   <%= f.label :content %><br>
   <%= f.text_area :content, size:"40x10" %><br>
+  <br>
+  <% @categories.each do |category| %>
+    <%= check_box_tag("entry[category_ids][]", category.id, @entry.categories.include?(category)) %>
+    <%= category.name %>
+  <% end %>
 </div>
 
 <div class="actions">
