--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -5,6 +5,9 @@
   <p>
   <%= @entry.content %>
   </p>
+  <% @selected_categories.each do |category| %>
+  <%= category.name %>
+  <% end %>
 </p>
 
 <%= link_to 'Edit', edit_entry_path(@entry) %> |
