--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -4,14 +4,20 @@
 
 <br>
 <% @entries.each do |entry| %>
-<span class="title"><%= entry.title %></span><br/>
-<%= entry.content %>
-<br>
-Created at:<%= entry.created_at %>
-<br>
-<%= link_to 'Show', entry_path(entry) %> | <%= link_to 'Edit', edit_entry_path(entry) %> | <%= link_to 'Destroy', entry_path(entry), method: :delete %>
-
-<br>
+  <span class="title"><%= entry.title %></span><br/>
+  <%= entry.content %>
+  <br>
+  Created at: <%= entry.created_at.strftime("%B %e, %Y") %>
+  <br>
+  Categories:
+  <% entry.categories.each do |category| %>
+    <%= category.name %>
+  <% end %>
+  <br>
+  <%= link_to 'Show', entry_path(entry) %> | <%= link_to 'Edit', edit_entry_path(entry) %> |
+  <%= link_to 'Destroy', entry_path(entry), method: :delete %>
+  <br>
+  <br>
 <% end %>
 
 
