updated categories index page

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,4 +4,6 @@ Category Title:
 <%= @category.name %>
 <br>
 <%= link_to 'Edit', edit_category_path(@category) %> |
-<%= link_to 'Journal', entries_path %>
+<%= link_to 'Journal', entries_path %> |
+<%= link_to 'Categories', categories_path %>
+
