--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Entries</h1>
 <%= link_to 'New Journal Entry', new_entry_path %> |
-<%= link_to 'New Category', new_category_path %>
+<%= link_to 'Category Manager', categories_path %>
 
 <br>
 <% @entries.each do |entry| %>
