--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Categories:</h1>
-<%= link_to 'New Category', new_category_path %>
+
 <br>
 <br>
 <% @categories.each do |category| %>
@@ -12,11 +12,11 @@
     <li><%= link_to "#{entry.title}", entry_path(entry) %></li>
   <% end %>
   </ul>
-  <br>
   <%= link_to 'Edit', edit_category_path(category) %> |
   <%= link_to 'Destroy', category_path(category), method: :delete %>
   <br>
   <br>
 <% end %>
-<%= link_to 'Return to Journal', entries_path %>
+
+<%= link_to 'New Category', new_category_path, class: "button radius" %>
 
